--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,7 +6,7 @@ primaryColor = "#d33682"
 backgroundColor = "#002b36"
 
 # Background color used for the sidebar and most interactive widgets.
-secondaryBackgroundColor = "#586e75"
+secondaryBackgroundColor = "#D0DB61"
 
 # Color used for almost all text.
 textColor = "#fff"
